# Omni-Agent-Hub

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  COPYRIGHT  LEGAL.md  LICENSE  LICENSE_COMPLIANCE.md  Makefile  NOTICE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT_HEADER.txt  FUNDING.yml  SECURITY.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  roadmap.yml  support.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
sql/: init.sql
src/omni_agent_hub/: __init__.py  cli.py  main.py
src/omni_agent_hub/agents/: __init__.py  base_agent.py  react_orchestrator.py
src/omni_agent_hub/analytics/: __init__.py  performance_monitor.py
src/omni_agent_hub/api/: __init__.py  models.py  routes.py
src/omni_agent_hub/core/: config.py  container.py  exceptions.py  logging.py
src/omni_agent_hub/database/: schema.sql
src/omni_agent_hub/learning/: __init__.py  adaptive_learning.py
src/omni_agent_hub/memory/: __init__.py  context_memory.py
src/omni_agent_hub/prompts/: __init__.py  context_manager.py  few_shot_learning.py  prompt_optimizer.py  prompt_templates.py
src/omni_agent_hub/services/: __init__.py  database.py  kafka_manager.py  llm_service.py  minio_manager.py  redis_manager.py  vector_db.py
tests/: __init__.py  conftest.py  test_api.py
